# oxidize-mail

./: Cargo.toml  README.md  log.out  todo.md  tool_list.md
.github/ISSUE_TEMPLATE/: enhancement.md
app/: Cargo.toml
crates/oxidize-mail/: Cargo.toml  build.rs
crates/oxidize-mail-core/: Cargo.toml
crates/oxidize-mail-core/src/: lib.rs
crates/oxidize-mail-parser/: Cargo.toml
crates/oxidize-mail-parser/src/: lib.rs
crates/oxidize-mail-storage/: Cargo.toml
crates/oxidize-mail-storage/migrations/: V1__initial_schema.sql  V2__add_folders.sql
crates/oxidize-mail-storage/src/: database.rs  db_operations.rs  lib.rs  playground.sql  queries.rs
crates/oxidize-mail-types/: Cargo.toml
crates/oxidize-mail-types/src/: app_config.rs  config.rs  lib.rs  parsed_email.rs  user_config.rs
crates/oxidize-mail/docs/: property.md  ui_docs.md
crates/oxidize-mail/resources/: oxidize-mail.gresource.xml
crates/oxidize-mail/resources/css/: style.css
crates/oxidize-mail/src/: config.rs  main.rs  startup.rs  style.css
crates/oxidize-mail/src/ui/: header_bar.rs  left_pane.rs  mod.rs  settings_dialog.rs
crates/oxidize-mail/src/utilis/: mod.rs  register_resources.rs  style.rs
