[package]
name = "oxidize-mail-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core email protocol handling (IMAP/SMTP) for Oxidize Mail"

[dependencies]
# Email protocols
async-imap.workspace = true
lettre.workspace = true

oxidize-mail-storage = { path = "../oxidize-mail-storage" }
oxidize-mail-types = { path = "../oxidize-mail-types/" }

# Authentication & Security
oauth2.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true

# Async runtime & networking
tokio.workspace = true
reqwest.workspace = true

# Utilities
log.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
url.workspace = true

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
