[package]
name = "oxidize-mail-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Database and caching layer for Oxidize Mail"

[dependencies]
# Database
rusqlite.workspace = true
oxidize-mail-types = { path = "../oxidize-mail-types" }
# Serialization
serde.workspace = true
serde_json.workspace = true

# Date/Time
chrono.workspace = true

# Utilities
log.workspace = true
uuid.workspace = true

# Async runtime for background sync
tokio.workspace = true

[features]
search = ["tantivy"]

[dependencies.tantivy]
workspace = true
optional = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
