[package]
name = "oxidize-mail"
version.workspace = true        # ← Inherit from workspace
edition.workspace = true        # ← Inherit from workspace
authors.workspace = true        # ← Inherit from workspace
license.workspace = true        # ← Inherit from workspace
repository.workspace = true     # ← Inherit from workspace
description = "A fast, clean email client built with Rust and GTK"

[[bin]]
name = "oxidize-mail"
path = "src/main.rs"

# In crates/oxidize-mail/Cargo.toml

[dependencies]
# Internal workspace crates
oxidize-mail-core = { path = "../oxidize-mail-core" }
oxidize-mail-parser = { path = "../oxidize-mail-parser" }
oxidize-mail-storage = { path = "../oxidize-mail-storage" }

# GUI dependencies from workspace
gtk4.workspace = true
gdk4.workspace = true
glib.workspace = true
webkit6.workspace = true

# Async runtime
tokio.workspace = true

# Utilities
log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
config.workspace = true
dirs = "6.0"
toml ="0.9.8"
tempfile = "3.6.0"
# --- Optional dependencies ---
notify-rust = { workspace = true, optional = true }
secret-service = { workspace = true, optional = true, features = ["rt-tokio-crypto-rust"] }
tantivy = { workspace = true, optional = true }
sourceview5 = { workspace = true, optional = true }


[features]
default = ["notifications", "keyring"]
notifications = ["dep:notify-rust"]
keyring = ["dep:secret-service"]
search = ["dep:tantivy", "oxidize-mail-storage/search"]
